   `upsmon.service` (so simple `systemctl reload upsd` can work) [#1777]

 - Extended driver-server socket protocol with `BROADCAST (num)` keyword,
   and a `NOBROADCAST` as a shortcut for `BROADCAST 0`. This allows clients
   to toggle whether they want to receive `send_to_all()` updates from a
   driver, or only answers to requests they send [#1914]

 - Numerous daemons (`upsd`, `upsmon`, drivers, `upsdrvctl`, `upssched`)
   which accepted `-D` option for debug setting previously, now can also
   honour a `NUT_DEBUG_LEVEL=NUM` environment variable if no `-D` arguments
   were provided. Unlike those arguments, the environment variable does
   not enforce that daemons run in foreground mode by default [#1915]

 - Implemented generic support for INSTCMD and SETVAR use-cases shared by
   all drivers, and in particular to see and change active debug verbosity
   using the driver-server and server-client protocol (at higher priority
   than CLI or config file choices) per [#1285], e.g.
------
# Set verbosity level 6:
:; upsrw -s driver.debug=6 UPS

# Set verbosity level 0 to disable the noise (even if debug_min is set):
:; upsrw -s driver.debug=0 UPS1@localhost

# Un-set the protocol override, honour CLI or config-file settings again:
:; upsrw -s driver.debug=-1 remoteUPS@1.2.3.4
------
+
and a `driver.killpower` instant command (for safety, must be unlocked by
   `driver.flag.allow_killpower` protocol setting or `allow_killpower`
   configuration flag), which is now the first choice for `driver -k`
   operations [#1917, #1923]

 - Implemented basic support for `ups.conf` reloading in NUT drivers,
   with a `driver.reload-with-error` instant command (more commands and
   signal handling may be available depending on platform), with a goal
   of changing inconsequential settings like `debug_min` for a running
   driver. This can also benefit the drivers on systems managed by real-time
   `nut-driver-enumerator` and for simpler changes the drivers get only